Fix unsupported flexbox gap

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -100,21 +100,23 @@ $box-shadow-sticky: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
   }
 }
 
-.sticky .header {
-  background-color: $background-color-sticky;
-  box-shadow: $box-shadow-sticky;
-  height: 8rem;
-  padding-top: 0;
-  padding-bottom: 0;
+.sticky {
+  .header {
+    background-color: $background-color-sticky;
+    box-shadow: $box-shadow-sticky;
+    height: 8rem;
+    padding-top: 0;
+    padding-bottom: 0;
 
-  position: fixed;
-  top: 0;
-  bottom: 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
 
-  width: 100%;
-  z-index: 999;
-}
+    width: 100%;
+    z-index: 999;
+  }
 
-.sticky .hero-section {
-  margin-top: 9.6rem;
+  .hero-section {
+    margin-top: 9.6rem;
+  }
 }
